build/log/idf_py_stderr_output_21365
CMake Deprecation Warning at /home/fus/.fus/esp-idf/components/mbedtls/mbedtls/CMakeLists.txt:21 (cmake_minimum_required):
  Compatibility with CMake < 3.10 will be removed from a future version of
  CMake.

  Update the VERSION argument <min> value.  Or, use the <min>...<max> syntax
  to tell CMake that the project requires at least <min> but has been updated
  to work with policies introduced by <max> or earlier.


In file included from /home/fus/.fus/esp-idf/components/driver/gpio/include/driver/gpio.h:12,
                 from /home/fus/Documents/hello_world/include/main.h:4,
                 from /home/fus/Documents/hello_world/main/main.c:1:
/home/fus/Documents/hello_world/main/main.c: In function 'app_main':
/home/fus/Documents/hello_world/main/main.c:96:21: error: implicit declaration of function 'esp_task_wdt_add' [-Werror=implicit-function-declaration]
   96 |     ESP_ERROR_CHECK(esp_task_wdt_add(NULL));
      |                     ^~~~~~~~~~~~~~~~
/home/fus/.fus/esp-idf/components/esp_common/include/esp_err.h:117:30: note: in definition of macro 'ESP_ERROR_CHECK'
  117 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5676: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:136: all] Error 2
